--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "menu-pizza",
   "version": "0.1.0",
+  "homepage": "https://mohamed-samadi.github.io/menu-pizza" ,
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
